# thesis-code

./: .gitignore  .pre-commit-config.yaml  README.md  config.mk  pyproject.toml
gw/: .gitignore  README.md
gw/antenna_patterns/: Makefile  README.md  antenna_patterns.py  plot_static.py  urls.json
gw/general_plots/: Makefile  README.md  cbc_plot.ipynb  gw_amplitude.py  orientation_plot.ipynb  parameter_space_plots.ipynb  ring_plot.ipynb  waveform_plot.ipynb
gw/inessai_errors/: README.md
gw/likelihood_plots/: parameter_space_plots.ipynb
gw/nessai_improvements/: README.md  cvm_comparison.ipynb  pp_plots.ipynb
gw/nessai_paper/: .gitignore  README.md  compute_jsd.py  plot_jsd.ipynb  reconstruct_dynesty_91.py  (+1 more)
likelihoods/: README.md  plot_3d_likelihood_surface.py  urls.json
ml/: generic_plots.ipynb
normalising_flows/: .gitignore  Makefile  lu_factorization.ipynb  multimodal_target.py  nf_coupling_plot.py  training_w_weights.ipynb
pp_plots/: Makefile  pp_plots.py
thesis_utils/: README.md  pyproject.toml
thesis_utils/src/thesis_utils/: __init__.py  colours.py  coordinates.py  io.py  js.py  nessai.py  plotting.py  random.py  sorting.py
thesis_utils/src/thesis_utils/conf/: __init__.py  thesis.mplstyle
thesis_utils/src/thesis_utils/gw/: __init__.py  quaternions.py  utils.py
thesis_utils/src/thesis_utils/gw/injections/: __init__.py  base.py  bbh_gw150914.json  bns_vanilla.json
thesis_utils/src/thesis_utils/sampling/: rejection.py
thesis_utils/tests/: test_plotting.py  test_sorting.py
thesis_utils/tests/test_sampling/: test_rejection.py
(+103 files in other folders)
