[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis_utils"
description = "Utilities for my thesis"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["thesis"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bilby[gw]",
    "matplotlib",
    "nessai",
    "nessai-models",
    "natsort",
    "numpy",
    "pandas",
    "seaborn",
    "torch",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = ".."

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
